--- a/packaging-ml--model/requirements.txt
+++ b/packaging-ml--model/requirements.txt
@@ -1,10 +1,10 @@
 #Model -Building Requirements
-numpy
-pandas
+numpy==1.26.4
+pandas==2.2.2
 joblib
-scikit-learn
+scikit-learn==1.3.2
 scipy
 setuptools
 wheel
 pytest
-streamlit
+streamlit==1.35.0
